Carl Jung git git statusgit status

--- a/plummer_nigel_exercise_html/index.html
+++ b/plummer_nigel_exercise_html/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <h1>Carl Jung</h1>
+      <h1>Carl Jung!!!!</h1>
       <nav>
         <ul>
           <li><a href="#early_life">Early Life</a></li>
