updated week3 html.index

--- a/plummer_nigel_exercise_html/index.html
+++ b/plummer_nigel_exercise_html/index.html
@@ -70,29 +70,29 @@
           even today.
         </p>
       </section>
-      <div class="flex-container">
-        <div class="flex-item">
-          <h3>personality Theory</h3>
+      <section aria-label="Jungian Themes" class="flex-container">
+        <article class="flex-item">
+          <h3>Personality Theory</h3>
           <p>
             Jung believed each individual strives for wholeness through the
             integration of the conscious and unconscious.
           </p>
-        </div>
-        <div class="flex-item">
+        </article>
+        <article class="flex-item">
           <h3>Spirituality</h3>
           <p>
             Jung was deeply interested in mythology, religion, and symbolism,
             which influenced his theories.
           </p>
-        </div>
-        <div class="flex-item">
+        </article>
+        <article class="flex-item">
           <h3>Modern Influence</h3>
           <p>
             Many contemporary therapies and self-help concepts are rooted in
             Jungian psychology.
           </p>
-        </div>
-      </div>
+        </article>
+      </section>
     </main>
     <footer>
       <p>
