--- a/plummer_nigel_exercise_html/index.html
+++ b/plummer_nigel_exercise_html/index.html
@@ -93,6 +93,26 @@
           </p>
         </article>
       </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <form action="#" method="post">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
+
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
+
+          <label>
+            <input type="checkbox" name="subscribe" />
+            Subscribe to newsletter
+          </label>
+
+          <button type="submit">Send</button>
+        </form>
+      </section>
     </main>
     <footer>
       <p>
@@ -102,5 +122,6 @@
         >.
       </p>
     </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
